<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/citiesList"
        android:hint="@string/choiseCity"
        android:completionThreshold="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/settings"
        />
    <CheckBox
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:checked="true"
        />
    <CheckBox
        android:id="@+id/cloudiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cloudiness"
        android:checked="true"
        />
    <CheckBox
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        />
    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        />
    <CheckBox
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        />
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ok"
        />
</LinearLayout>